# yomika

./: LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
tests/: test_webscrape_aiohttp.py  test_webscrape_requests.py
webscrapers.egg-info/: PKG-INFO  SOURCES.txt
yomika/: __init__.py  classes.py  defaults.py  exceptions.py  processors.py  webscrape_aiohttp.py  webscrape_requests.py
yomika/modules/: check_connectivity.py  rate_limiter.py  url_validator.py  utils.py
