[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yomika"
authors = [{name = "trulybeloved", email = "toshiroakari@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
version = "0.0.2"
dependencies = [
  "aiohttp>=3.11.18",
  "requests>=2.32.3",
  "backoff>=2.2.1",
]
